# primer

./: .gitignore  CMakeLists.txt  main.cpp
applications/: build_lookup.cpp  primer.cpp  scratchpad.cpp
lib/: bits.cpp  bits.h  constants.h  debugging.h  lookups.cpp  lookups.h  reverse.h  solver.cpp  solver.h
